--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include *.txt *.ini *.cfg *.rst
-recursive-include osstp *.ico *.png *.css *.gif *.jpg *.txt *.js *.html *.htm *.xml *.jinja2 *.mo *.map *.eot *.svg *.ttf *.woff
+recursive-include fosstp *.ico *.png *.css *.gif *.jpg *.txt *.js *.html *.htm *.xml *.jinja2 *.mo *.map *.eot *.svg *.ttf *.woff
