--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.5"
 # command to install dependencies
 install:
+    - "pip install -U pip setuptools"
     - "pip install -r requirements.txt"
     - "pip install ."
 # command to run tests
