--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ python:
 install:
     - "pip install -U pip setuptools"
     - "pip install -r requirements.txt"
+    - "pip install coveralls"
     - "pip install ."
 # command to run tests
-script: py.test
+script:
+    - "py.test"
+    - "coverage run --source=fosstp setup.py test"
+
+after_success:
+    - "coveralls"
