--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,12 @@
-alembic==0.8.6
-Chameleon==2.24
-colander==1.2
-ColanderAlchemy==0.3.3
-deform==2.0a2
-iso8601==0.1.11
+alembic==0.8.7
 Jinja2==2.8
 Mako==1.0.4
 MarkupSafe==0.23
-https://dev.mysql.com/get/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
 PasteDeploy==1.5.2
-peppercorn==0.5
-py==1.4.31
 Pygments==2.1.3
-pyramid==1.6.1
-pyramid-debugtoolbar==2.4.2
+PyMySQL==0.7.9
+pyramid==1.7.3
+pyramid-debugtoolbar==3.0.4
 pyramid-jinja2==2.6.2
 pyramid-mailer==0.14.1
 pyramid-mako==1.0.2
@@ -21,18 +14,17 @@ pyramid-redis-sessions==1.0.1
 pyramid-sqlalchemy==1.6
 pyramid-tm==0.12.1
 pyramid-wtforms==2.4.0
-pytest==2.9.1
-python-editor==1.0
+python-editor==1.0.1
 redis==2.10.5
 repoze.lru==0.6
 repoze.sendmail==4.2
-SQLAlchemy==1.0.12
-transaction==1.4.4
+SQLAlchemy==1.0.15
+transaction==1.6.1
 translationstring==1.3
 venusian==1.0
-waitress==0.9.0b1
-WebOb==1.6.0
+waitress==1.0.0
+WebOb==1.6.1
 WTForms==2.1
 zope.deprecation==4.1.2
-zope.interface==4.1.3
-zope.sqlalchemy==0.7.6
+zope.interface==4.3.2
+zope.sqlalchemy==0.7.7
