--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,14 @@ python:
 # command to install dependencies
 install:
     - "pip install -U pip setuptools"
-    - "pip install -r requirements.txt"
+    - "pip install -r dev_requirements.txt"
     - "pip install coveralls"
     - "pip install ."
 # command to run tests
 script:
     - "py.test"
     - "coverage run --source=fosstp setup.py test"
+    - "py.test --cov=fosstp"
 
 after_success:
     - "coveralls"
