--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,33 @@
 alembic==0.8.8
+coverage==4.2
 Jinja2==2.8
-Mako==1.0.4
+Mako==1.0.6
 MarkupSafe==0.23
 PasteDeploy==1.5.2
+py==1.4.31
 Pygments==2.1.3
 PyMySQL==0.7.9
 pyramid==1.7.3
-pyramid-debugtoolbar==3.0.4
-pyramid-jinja2==2.6.2
+pyramid-debugtoolbar==3.0.5
+pyramid-jinja2==2.7
 pyramid-mailer==0.14.1
 pyramid-mako==1.0.2
 pyramid-redis-sessions==1.0.1
 pyramid-sqlalchemy==1.6
-pyramid-tm==1.0
+pyramid-tm==1.0.2
 pyramid-wtforms==2.4.0
-python-editor==1.0.1
+pytest==3.0.4
+python-editor==1.0.2
 redis==2.10.5
 repoze.lru==0.6
 repoze.sendmail==4.2
-SQLAlchemy==1.1.2
-transaction==1.6.1
+SQLAlchemy==1.1.4
+transaction==1.7.0
 translationstring==1.3
 venusian==1.0
-waitress==1.0.0
-WebOb==1.6.2
+waitress==1.0.1
+WebOb==1.7.0rc1
 WTForms==2.1
-zope.deprecation==4.1.2
+zope.deprecation==4.2.0
 zope.interface==4.3.2
 zope.sqlalchemy==0.7.7
