使相依套件使用最新版

--- a/Pipfile
+++ b/Pipfile
@@ -3,15 +3,15 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [packages]
-alembic = "==0.8.8"
-PyMySQL = "==0.7.9"
-pyramid = "==1.7.3"
-pyramid_jinja2 = "==2.7"
-pyramid_mailer = "==0.14.1"
-pyramid_redis_sessions = "==1.0.1"
-pyramid_sqlalchemy = "==1.6"
-pyramid_tm = "==1.0.2"
-pyramid_wtforms = "==2.4.0"
+alembic = "*"
+PyMySQL = "*"
+pyramid = "*"
+pyramid_jinja2 = "*"
+pyramid_mailer = "*"
+pyramid_redis_sessions = "*"
+pyramid_sqlalchemy = "*"
+pyramid_tm = "*"
+pyramid_wtforms = "*"
 bcrypt = "*"
 Markdown = "*"
 feedparser = "*"
