--- a/Pipfile
+++ b/Pipfile
@@ -20,3 +20,13 @@ feedparser = "*"
 pytest = "*"
 pytest-cov = "*"
 pyramid_debugtoolbar = "*"
+pyramid-debugtoolbar = "*"
+waitress = "*"
+webtest = "*"
+rope = "*"
+"autopep8" = "*"
+fosstp = {editable = true,path = "."}
+tox = "*"
+flake8 = "*"
+pytest-mock = "*"
+mixer = "*"
